[tool.poetry]
name = "code_checker"
version = "0.1.0"
description = ""
authors = ["Christopher Bayer <christopher.bayer@luminartech.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
pylint = "^2.15.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
flake8-isort = "^4.2.0"
isort = "^5.10.1"
mypy = "^0.971"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
code-checker = "code_checker.main:checker"
code-fixer = "code_checker.main:fixer"

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = 88

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
